[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crisis-logistics-env"
version = "0.1.0"
description = "Crisis Logistics Environment"
authors = [{ name = "Neelesh" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "numpy",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"